# edgeai-tidlrunner

./: .gitignore  LICENSE  LICENSE_ADDITIONAL  README.md  README.md.REMOVED.git-id  example_advanced_rtwrapper.sh  example_advanced_rtwrapper.sh.REMOVED.git-id  example_advanced_runner_py.sh  example_download_all.sh  example_download_datasets.sh  example_download_tidl_tools.sh  example_download_tidl_tools_gpu.sh  example_download_tools.sh  example_rtwrapper.sh.REMOVED.git-id  example_runner_cli.sh  example_runner_cli.sh.REMOVED.git-id  example_runner_cli_evm.sh  example_runner_cli_pc.sh  example_runner_config.sh  example_runner_config.sh.REMOVED.git-id  example_runner_configs.sh  example_runner_py.sh  example_runner_py.sh.REMOVED.git-id  example_runtimes.sh.REMOVED.git-id  pyproject.toml  run_download_all.sh  run_runner_cli.sh  run_runner_cli_example.sh.REMOVED.git-id  run_runner_py_example.sh.REMOVED.git-id  run_runtimes_core_example.sh.REMOVED.git-id  run_test.sh.REMOVED.git-id  runner_cli_example.sh.REMOVED.git-id  runner_py_example.sh.REMOVED.git-id  set_env.sh  set_env.sh.REMOVED.git-id  setup.py.REMOVED.git-id  setup_evm.sh  setup_evm.sh.REMOVED.git-id  setup_optimizer_pc.sh  setup_pc.sh  (+20 more)
deprecated/: set_env.sh  tidlrunnercli-deprecated.sh  tidlrunnercli-evm-deprecated  tidlrunnercli-evm.sh  tidlrunnercli-pc-deprecated  tidlrunnercli-pc.sh  tidlrunnercli.sh
docs/: advanced_usage.md  command_line_arguments.md  commandline.md  commandline_interface.md  configfile.md  configfile_interface.md  custom.md  custom_datasets.md  custom_models.md  generic_dataloader.md  getting_started.md  modelmaker_datasets.md  prompts.txt  pythonic_interface.md  rtwrapper.md  rtwrapper_interface.md  runtime_settings.md  settings.md  setup.md
edgeai_insight/: README.md  data_extractor.py  html_generator.py  template.html
edgeai_tidlrunner/: __init__.py  download.py  interfaces.py  main.py  main.py.REMOVED.git-id  set_env.py  start.py  version.py
examples/: example_advanced_rtwrapper.sh  example_advanced_runner_py.sh  example_download_tools_gpu.sh  example_runner_cli_evm.sh  example_runner_cli_pc.sh  example_runner_evm.sh
requirements/: requirements_evm.txt  requirements_pc.txt
scripts/: run_benchmark_accuracy_evm.sh  run_benchmark_accuracy_pc.sh  run_benchmark_default_evm.sh  run_benchmark_default_pc.sh  run_set_env.sh.REMOVED.git-id  set_env.sh.REMOVED.git-id
tidl-runner/: LICENSE.REMOVED.git-id  README.md  README.md.REMOVED.git-id  example_runner_cli.sh.REMOVED.git-id  example_runner_py.sh.REMOVED.git-id  run_set_env.sh.REMOVED.git-id  run_test.sh.REMOVED.git-id  run_test_cli.sh.REMOVED.git-id  run_test_py.py.REMOVED.git-id  run_test_py.sh.REMOVED.git-id  set_env.sh.REMOVED.git-id  setup.py.REMOVED.git-id  setup_evm.sh.REMOVED.git-id  setup_pc.sh.REMOVED.git-id  tidl-run.REMOVED.git-id  tidl-runner-cli.REMOVED.git-id
tidl-runtime/: setup.py.REMOVED.git-id
tidl-tools/: LICENSE.REMOVED.git-id  README.md  README.md.REMOVED.git-id  (+5 more)
tidloptimizer/: README.md  pyproject.toml  setup_optimizer_pc.sh
tidloptimizer/edgeai_tidloptimizer/: README.md  __init__.py  download.py  main.py
tidloptimizer/edgeai_tidloptimizer/optimizer/common/: __init__.py
tidloptimizer/edgeai_tidloptimizer/optimizer/common/pipelines/: __init__.py  convert.py  distill.py  qad.py  qdistill.py  quantize.py
tidloptimizer/edgeai_tidloptimizer/optimizer/common/settings/: settings_default.py
tidloptimizer/edgeai_tidloptimizer/optimizer/common/utils/: distill_wrapper.py  distiller_wrapper.py  hooks_wrapper.py  model_utils.py  onnxscript_utils.py  parametrize_wrapper.py  torch_functional.py
tidlrunner/: README.md  pyproject.toml  setup_runner_pc.sh
tidlrunner/docs/: command_line_arguments.md  commandline_interface.md  configfile_interface.md  custom_models_and_datasets.md  generic_dataloader.md  getting_started.md  prompts.txt  pythonic_interface.md  rtwrapper_interface.md  running_on_evm.md  runtime_settings.md  setup.md  usage_advanced.md  usage_basic.md
tidlrunner/edgeai_tidlrunner/: README.md  __init__.py  download.py  interfaces.py  main.py  start.py
tidlrunner/edgeai_tidlrunner/modelinsight/: README.md  data_extractor.py  html_generator.py  profile.py  template.html
tidlrunner/edgeai_tidlrunner/modelinspector/: README.md  data_extractor.py  html_generator.py  template.html
tidlrunner/edgeai_tidlrunner/rtwrapper/: set_env.py
tidlrunner/edgeai_tidlrunner/rtwrapper/core/: __init__.py  basert_wrapper.py  onnxrt_wrapper.py  tflitert_wrapper.py  tvmdlr_wrapper.py  tvmrt_wrapper.py
tidlrunner/edgeai_tidlrunner/rtwrapper/options/: __init__.py  enumerations.py  options_default.py  runtime_options.py
tidlrunner/edgeai_tidlrunner/runner/common/bases/: pipeline_base.py  settings_base.py
tidlrunner/edgeai_tidlrunner/runner/common/blocks/: __init__.py
tidlrunner/edgeai_tidlrunner/runner/common/blocks/dataloaders/: dataloader_utils.py  dataset_base.py  image_list.py  modelmaker_dataloaders.py  object_detection.py  random_data.py
tidlrunner/edgeai_tidlrunner/runner/common/blocks/postprocess/: __init__.py  bev_detection.py  transforms.py
tidlrunner/edgeai_tidlrunner/runner/common/blocks/preprocess/: __init__.py  functional.py  transforms.py
tidlrunner/edgeai_tidlrunner/runner/common/blocks/sessions/: sessions.py
tidlrunner/edgeai_tidlrunner/runner/common/pipelines/: __init__.py  accuracy.py  analyze.py  compile.py  evaluate.py  extract.py  infer.py  insight.py  inspector.py  modelinsight.py  package.py  report.py  surgery.py  surgery_gui.py
tidlrunner/edgeai_tidlrunner/runner/common/pipelines/common_/: compile_base.py
tidlrunner/edgeai_tidlrunner/runner/common/settings/: constants.py  runtime_settings.py  settings_default.py
tidlrunner/edgeai_tidlrunner/runner/common/utils/: __init__.py  artifacts_id.py  file_utils.py  logger_utils.py  onnx_utils.py  parallel_runner.py  parse_utils.py  print_utils.py  process_with_queue.py  sequential_runner.py  string_utils.py
tidlrunner/edgeai_tidlrunner/runner/common/utils/config_utils/: misc_utils.py  params_base.py  postprocess_utils.py
(+504 files in other folders)
