[build-system]
requires = ["setuptools>=42", "pyyaml", "tqdm"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeai_tidlrunner"
version = "11.0"
description = "Edge AI TIDL Runner"
authors = [
    { name = "Edge AI Development Team", email = "edgeai-dev@list.ti.com" }
]
license = { text = "BSD 3-Clause" }
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "cython",
    "requests",
    "tqdm",
    "pillow"
]

[project.urls]
"Homepage" = "https://bitbucket.itg.ti.com/projects/EDGEAI-ALGO/repos/edgeai-tidlrunner/browse"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.dynamic]
version = {attr = "edgeai_tidlrunner.__version__"}
