[build-system]
requires = ["setuptools>=42", "pyyaml", "tqdm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeai-tidlrunner"
version = "11.1.0"
description = "Edge AI TIDL Runner"
authors = [
    { name = "Edge AI Development Team", email = "edgeai-dev@list.ti.com" }
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "cython",
    "pillow",
    "requests",
    "tqdm",
    "pyyaml",
    "pycocotools",
    "colorama",
    "munkres",
    "json_tricks",
    "wurlitzer",
    "xlsxwriter"
]

[project.urls]
"Homepage" = "https://github.com/TexasInstruments/edgeai-tidlrunner"
"Bug Reports" = "https://github.com/TexasInstruments/edgeai-tidlrunner/issues"
"Source" = "https://github.com/TexasInstruments/edgeai-tidlrunner"

[project.optional-dependencies]
pc = [
    "opencv-python-headless",
    "numpy==1.23.0",
    "onnxsim==0.4.35",
    "osrt_model_tools@git+ssh://git@bitbucket.itg.ti.com/processor-sdk-vision/edgeai-tidl-tools.git@2025/kunal_opt_merge#subdirectory=osrt-model-tools", ## "osrt_model_tools@git+https://github.com/TexasInstruments/edgeai-tidl-tools.git@11_00_08_00#subdirectory=osrt-model-tools",
]
evm = [
    "pycocotools"
]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
download-tidlrunner-tools = "edgeai_tidlrunner.download:main"
tidlrunnercli = "edgeai_tidlrunner.main:main"
tidlrunnercli-pc = "edgeai_tidlrunner.main:main_pc"
tidlrunnercli-evm = "edgeai_tidlrunner.main:main_evm"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["edgeai_tidlrunner*"]

