[build-system]
requires = ["setuptools>=42", "pyyaml", "tqdm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeai-tidlrunner"
version = "11.2.0"
description = "Edge AI TIDL Runner"
authors = [
    { name = "Edge AI Development Team", email = "edgeai-dev@list.ti.com" }
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "cython",
    "pillow",
    "requests",
    "tqdm",
    "pyyaml",
    "pycocotools",
    "colorama",
    "munkres",
    "json_tricks",
    "wurlitzer",
    "xlsxwriter",
    "tabulate"
]

[project.urls]
"Homepage" = "https://github.com/TexasInstruments/edgeai-tidlrunner"
"Bug Reports" = "https://github.com/TexasInstruments/edgeai-tidlrunner/issues"
"Source" = "https://github.com/TexasInstruments/edgeai-tidlrunner"

[project.optional-dependencies]
pc = [
    "opencv-python-headless",
    "onnx==1.14.0",
    "protobuf==3.20.3",
    "numpy==1.23.0",
    "onnxsim==0.4.36", 
]
evm = [
    "pycocotools"
]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
tidlrunner-tools-install = "edgeai_tidlrunner.download:main"
tidlrunner-cli = "edgeai_tidlrunner.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["edgeai_tidlrunner*"]

